add plex and qbittorrent

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-FILEBROWSER_DATA=./filebrowser-data
+FILEBROWSER_VOLUME=./filebrowser-volume
+PLEX_VOLUME=./plex-volume
+QBITTORRENT_VOLUME=./qbitorrent-volume
