add proxy manager

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FILEBROWSER_VOLUME=./filebrowser-volume
 PLEX_VOLUME=./plex-volume
 QBITTORRENT_VOLUME=./qbitorrent-volume
+NGINX_PROXY_MANAGER_VOLUME=./nginx-proxy-manager-volume
