--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,30 @@
 services:
+
+###############
+# NGINX
+###############
+  # nginx:
+  #   image: nginx
+  #   container_name: nginx
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #   ports:
+  #   - "8080:80"
+
+  nginx:
+    image: 'jc21/nginx-proxy-manager:latest'
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '81:81'
+      - '443:443'
+    env_file:
+      - .env
+    volumes:
+      - ${NGINX_PROXY_MANAGER_VOLUME}/data:/data
+      - ${NGINX_PROXY_MANAGER_VOLUME}/letsencrypt:/etc/letsencrypt
+
 ###############
 # FILEBROWSER
 ###############
@@ -9,8 +35,8 @@ services:
       - ${FILEBROWSER_VOLUME}:/srv
     env_file:
       - .env
-    ports:
-      - 1900:80
+    # ports:
+      # - 1900:80
     restart: always
     deploy:
       resources:
@@ -31,13 +57,13 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
       - VERSION=docker
-      - PLEX_CLAIM= #https://account.plex.tv/en-GB/claim
+      - PLEX_CLAIM=claim-akLkjxiMwonFxwUifr4n #https://account.plex.tv/en-GB/claim
     volumes:
       - ${PLEX_VOLUME}/config:/config
       - ${PLEX_VOLUME}/media:/media
-    ports:
-      - 32400:32400
-      - 1900:1900/udp
+    # ports:
+      # - 32400:32400
+      # - 1900:1900/udp
     restart: always
     deploy:
       resources:
@@ -62,10 +88,10 @@ services:
     volumes:
       - ${QBITTORRENT_VOLUME}/config:/config
       - ${PLEX_VOLUME}/media:/downloads
-    ports:
-      - 8096:8096
-      - 6881:6881
-      - 6881:6881/udp
+    # ports:
+      # - 8096:8096
+      # - 6881:6881
+      # - 6881:6881/udp
     restart: always
     deploy:
       resources:
