setup sans gluetun

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ FILEBROWSER_VOLUME=./filebrowser-volume
 PLEX_VOLUME=./plex-volume
 QBITTORRENT_VOLUME=./qbitorrent-volume
 NGINX_PROXY_MANAGER_VOLUME=./nginx-proxy-manager-volume
+GLUETUN_VOLUME=./gluetun-volume
